--- a/index.html
+++ b/index.html
@@ -4,18 +4,36 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Apple watch</title>
 
   <!-- STYLE -->
-  <!-- <link rel="stylesheet" href="css/normalize.css"> -->
-  <!-- <link rel="stylesheet" href="css/style.css"> -->
-  <link rel="stylesheet" href="css/style.min.css">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
+  <!-- <link rel="stylesheet" href="css/style.min.css"> -->
 
 
 </head>
 <body>
+  <!-- HEADER -->
+  <header class="site-header">
+    <h1>hello</h1>
+  </header>
   
+  <!-- INTRODUCTION -->
+  <section class="intro">
+  </section>
 
+  <!-- FEATURES -->
+  <section class="features">
+  </section>
+
+  <!-- PURCHASE -->
+  <section class="purchase">
+  </section>
+
+  <!-- FOOTER -->
+  <footer class="site-footer">
+  </footer>  
 
 
 
