--- a/index.html
+++ b/index.html
@@ -14,13 +14,38 @@
 
 </head>
 <body>
-  <!-- HEADER -->
+  <!-- SITE-HEADER -->
   <header class="site-header">
-    <h1>hello</h1>
+    <div class="site-header-container container">
+      <a class="site-header-logo" href="">
+        <img class="site-logo-img" src="img/apple-logo.png" alt="site logo" width="35" height="42" srcset="img/apple-logo.png 1x, img/apple-logo@2x.png 2x">
+      </a>
+      <nav class="sitenav">
+        <ul class="sitenav-list">
+          <li class="sitenav-item active"><a class="sitenav-link" href="index.html">Home</a></li>
+          <li class="sitenav-item"><a class="sitenav-link" href="index.html">About</a></li>
+          <li class="sitenav-item"><a class="sitenav-link" href="index.html">Offers</a></li>
+          <li class="sitenav-item"><a class="sitenav-link" href="index.html">Services</a></li>
+        </ul>
+        <form class="for-help" action="https://echo.htmlacademy.ru" method="GET">
+          <input class="search-help-input" type="search" name="search" placeholder="How can we help you?" aria-label="How can we help you?" required>
+        </form>
+      </nav>
+    </div>
   </header>
   
   <!-- INTRODUCTION -->
   <section class="intro">
+    <div class="intro-container container">
+      <div class="intro-info">
+        <div class="intro-info-block">
+          <h1 class="intro-info-block-header">Freedom calls.</h1>
+          <p class="intro-info-block-text">Answer a call from your surfboard. Ask Siri to send a message. Stream your favorite songs on your run. And do it all while leaving your phone behind. Introducing Apple Watch Series 3 with cellular. Now you have the freedom to go with just your watch.</p>
+        </div>
+        <button class="intro-info-button">Watch the keynote</button>
+      </div>
+      <img class="intro-img" src="img/red-watch.jpg" alt="intro section image" width="587" height="565" srcset="img/red-watch.jpg 1x, img/red-watch@2x.jpg 2x">
+    </div>
   </section>
 
   <!-- FEATURES -->
