--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <h1 class="intro-info-block-header">Freedom calls.</h1>
           <p class="intro-info-block-text">Answer a call from your surfboard. Ask Siri to send a message. Stream your favorite songs on your run. And do it all while leaving your phone behind. Introducing Apple Watch Series 3 with cellular. Now you have the freedom to go with just your watch.</p>
         </div>
-        <button class="intro-info-button">Watch the keynote</button>
+        <a href="#"><button class="button">Watch the keynote</button></a>
       </div>
       <img class="intro-img" src="img/red-watch.jpg" alt="intro section image" width="587" height="565" srcset="img/red-watch.jpg 1x, img/red-watch@2x.jpg 2x">
     </div>
@@ -50,14 +50,50 @@
 
   <!-- FEATURES -->
   <section class="features">
+    <div class="container">
+      <ul class="features-list">
+        <li class="features-item">
+          <h2 class="features-item-heading">Know your runs. In and out.</h2>
+          <p class="features-item-text">Train smarter with more in-run stats. Want to compare a run to your last five? Just swipe left. Mark splits by selecting pause or using gestures, like tapping the screen or double-clicking the side button. And get a full post-run report, including elevation.</p>
+        </li>
+        <li class="features-item">
+          <h2 class="features-item-heading">Run in good spirits.</h2>
+          <p class="features-item-text">A little support can go a long way. You can receive encouraging emoji from friends. And reminders triggered by your friends’ shared activity, the current weather, or your own history give you every reason to run.</p>
+        </li>
+        <li class="features-item">
+          <h2 class="features-item-heading">Just do it. Sunday.</h2>
+          <p class="features-item-text">Run every Sunday and see how long you can keep your streak alive. Fuel your run with exclusive Nike+ Run Club playlists on Apple Music.</p>
+          <a class="learn-more" href="#"><h3 class="features-item-info">Learn more</h3></a>
+        </li>
+      </ul>
+    </div>
   </section>
 
   <!-- PURCHASE -->
   <section class="purchase">
+    <div class="purchase-container container">
+      <div class="purchase-block">
+        <div class="purchase-info">
+          <h2 class="purchase-header">Nike Sport Band. Light.Flexible. Breathable.</h2>
+          <p class="purchase-text">Made from the same durable, lightweight fluoroelastomer as the original Apple Watch Sport Band, the Nike Sport Band reduces weight and improves ventilation via row after row of compression-molded perforations.</p>
+        </div>
+        <a href="#"><button class="button">Buy now</button></a>
+      </div>
+      <img class="purchase-img" src="img/watch-in-hand.jpg" alt="image watch for purchase" width="400" height="600" srcset="img/watch-in-hand.jpg 1x, img/watch-in-hand@2x.jpg 2x">
+    </div>
   </section>
 
   <!-- FOOTER -->
   <footer class="site-footer">
+    <div class="site-footer-container container">
+      <div class="site-footer-block">
+        <div class="site-footer-info">
+          <h2 class="site-footer-info-header">Take control of your health. </h2>
+          <p class="site-footer-info-text">With built-in GPS and altimeter, Apple Watch Nike+ has all the features to help you take your run to the next level. You can even pair your watch wirelessly with compatible gym equipment. And it’s swimproof, so you can take a post-run dip in the pool.</p>
+        </div>
+        <a href="#"><button class="button">Explore features</button></a>
+      </div>
+    </div>
   </footer>  
 
 
