Add style min css file

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <title>Apple watch</title>
   
   <!-- STYLE -->
-  <!-- <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css"> -->
+  <link rel="stylesheet" href="css/normalize.css">
+  <!-- <link rel="stylesheet" href="css/style.css"> -->
   <link rel="stylesheet" href="css/style.min.css">
   
   
